--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,10 @@ jobs:
     strategy:
       matrix:
         file:
-          - project-template-esp32.yaml
-          - project-template-esp8266.yaml
+          - kc868-a4.yaml
+          - kc868-a8.yaml
+          - kc868-a16.yaml
+          - kc868-uair.yaml
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
